# finanlytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/backend/: main.py
src/backend/database/: __init__.py
src/backend/database/database_connection/: __init__.py  database_client.py  database_config.py
src/backend/database/models/: __init__.py  categories_model.py  transaction_model.py  user_model.py
src/backend/routers/: category_router.py  transaction_router.py  user_router.py
src/backend/schemas/: categories_schema.py  transaction_schema.py  user_schema.py
src/backend/services/: category_service.py  security_service.py  transaction_service.py  user_service.py
tests/: conftest.py  test_transaction_service.py  test_user_service.py
